<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_note"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle_note"
            android:title="@string/note">

            <menu>
                <item
                    android:id="@+id/menu_all_notes"
                    android:icon="@drawable/ic_notes_24"
                    android:title="@string/all_notes" />
                <item
                    android:id="@+id/menu_trash"
                    android:icon="@drawable/ic_trash_can_24"
                    android:title="@string/trash" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/menu_group_app"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle_app"
            android:title="@string/system">

            <menu>
                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/ic_logout_24"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>

</menu>