<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_view_note">
    <item
        android:id="@+id/nav_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_undo_24"/>
    <item
        android:id="@+id/nav_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_redo_24"/>
    <item
        android:id="@+id/nav_menu"
        android:title="@string/menu"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_24"/>
<!--    <item-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:title="@string/settings"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:icon="@drawable/ic_baseline_settings_24"/>-->

</menu>